header + fix footer
animation header collapse when scroll down + fix invisible content in footer

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -21,6 +21,7 @@
 body {
     width: 100%;
     margin: 0px;
+    background-color: var(--noir);
 }
 
 header {
@@ -32,12 +33,15 @@ header {
     padding-top: 1.5%;
     color: var(--blanc);
     z-index: 2;
+    transition: height 0.3s ease;
+    //height: 20%;
     .nom {
         position: relative;
         left: 50vw;
         margin: 1vh 5% 0 0;
         font-size: 5vw;
         margin-top: 0px;
+        transition: font-size 0.3s ease;
     }
 }
 
@@ -173,12 +177,15 @@ h2 {
 }
 
 footer {
+    display: block;
     width: 100%;
     height: 100%;
     background-color: var(--noir);
     overflow: hidden;
     color: var(--blanc);
     padding-bottom: 50px;
+    position: relative;
+    z-index: 2;
     .content {
         display: flex;
         flex-flow: column;
@@ -198,29 +205,34 @@ footer {
 
 @media screen and (min-width: 500px) {
     main {
-        .portfolio {
-            .autoportrait {
-                .content {
-                    grid-template-columns: 1fr 1fr;
+        .content {
+            .portfolio {
+                .autoportrait {
+                    .content {
+                        grid-template-columns: 1fr 1fr;
+                    }
                 }
-            }
-            .sonore {
-                .playBtn, .stopBtn {
-                    width: 100%;
+                .sonore {
+                    .playBtn, .stopBtn {
+                        width: 100%;
+                    }
                 }
             }
         }
+        
     }
     
 }
 
 @media screen and (min-width: 900px) {
     main {
-        .portfolio {
-            font-size: 24px;
-            .autoportrait {
-                .content {
-                    grid-template-columns: 1fr 1fr 1fr;
+        .content {
+            .portfolio {
+                font-size: 24px;
+                .autoportrait {
+                    .content {
+                        grid-template-columns: 1fr 1fr 1fr;
+                    }
                 }
             }
         }
